Primer archivo, dia 2 de la semana 2 con comentarios editados

--- a/day2.ipynb
+++ b/day2.ipynb
@@ -8,10 +8,7 @@
     "# ¡Día de Gradio!\n",
     "\n",
     "Hoy crearemos interfaces de usuario utilizando el increíblemente simple marco Gradio.\n",
-    "\n",
-    "## ¡Prepárate para la alegría!\n",
-    "\n",
-    "Ten en cuenta que las pantallas de Gradio pueden aparecer en \"modo oscuro\" o \"modo claro\" según la configuración de tu computadora."
+    "\n"
    ]
   },
   {
@@ -62,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "22586021-1795-4929-8079-63f5bb4edd4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Conéctese a OpenAI, Anthropic y Google; comente las líneas de Claude o Google si no las está usando\n",
+    "# Crear una instancia de OpenAI\n",
     "openai =OpenAI(\n",
     "  base_url=\"https://openrouter.ai/api/v1\",\n",
     "  api_key=openai_api_key\n",
@@ -76,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b16e6021-6dc4-4397-985a-6679d6c8ffd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Un mensaje genérico del sistema: ¡no más IA adversarias sarcásticas!\n",
+    "# Un mensaje genérico del sistema\n",
     "\n",
     "system_message = \"Eres un asistente útil\""
    ]
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "08f1f15a-122e-4502-b112-6ee2817dda32",
    "metadata": {},
    "outputs": [
@@ -215,14 +212,14 @@
     }
    ],
    "source": [
-    "# La simplicidad de Gradio. Esto puede aparecer en \"modo claro\". Más adelante te mostraré cómo hacerlo en modo oscuro.\n",
+    "# Crear una interfaz de usuario simple\n",
     "\n",
     "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c9a359a4-685c-4c99-891c-bb4d1cb7f426",
    "metadata": {},
    "outputs": [
@@ -266,8 +263,6 @@
    ],
    "source": [
     "# Agregar share=True significa que se puede acceder a él de forma pública\n",
-    "# Hay disponible un alojamiento más permanente mediante una plataforma llamada Spaces de HuggingFace,\n",
-    "# que abordaremos la próxima semana\n",
     "\n",
     "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\", flagging_mode=\"never\").launch(share=True)"
    ]
@@ -323,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "af9a3262-e626-4e4b-80b0-aca152405e63",
    "metadata": {},
    "outputs": [
@@ -359,9 +354,7 @@
    ],
    "source": [
     "# Usemos Markdown\n",
-    "# ¿Te preguntas por qué es importante configurar system_message cuando no se hace referencia a él en el código que se encuentra debajo?\n",
-    "# Estoy aprovechando que system_message es una variable global, que se usa en la función message_gpt (échale un vistazo)\n",
-    "# No es una gran práctica de ingeniería de software, pero es bastante común durante la investigación y el desarrollo de Jupyter Lab.\n",
+    "\n",
     "\n",
     "system_message = \"Eres una asistente útil que responde en formato markdown\"\n",
     "\n",
@@ -376,14 +369,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "88c04ebf-0671-4fea-95c9-bc1565d4bb4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vamos a crear una llamada que transmita resultados\n",
-    "# Si deseas un repaso de los generadores (la palabra clave \"yield\"),\n",
-    "# Echa un vistazo al cuaderno de Python intermedio en la carpeta de la semana 1.\n",
+    "\n",
     "\n",
     "\n",
     "def stream_gpt(prompt):\n",
@@ -644,12 +636,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c701ec17-ecd5-4000-9f68-34634c8ed49d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ¡Muchas gracias a Bill G., que se dio cuenta de que una versión anterior de este programa tenía un error! Ya está corregido.\n",
+    "\n",
     "\n",
     "system_message = \"Eres un asistente que analiza el contenido de la página de inicio \\\n",
     "del sitio web de una empresa y crea un folleto breve sobre la empresa para posibles clientes, inversores y nuevos empleados.\\\n",
